# crewai_AI

./: README.md
agentic_Project/: .env  pyproject.toml  setting.py
agentic_Project/src/myapp/: chainlit_app.py  frontend_agent.py  greeting_agent.py  main.py  script.py
setup/: readme.md
